--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html>
-<head>
-<title>super-page</title>
-<meta charset="utf-8">
-</head>
-<body>
-<h1> This is a heading </h1>
-<p> this is a paragraph </p>
-</body>
+	<head>
+		<title>super-page</title>
+		<meta charset="utf-8">
+	</head>
+
+	<body>
+		<h1> This is a heading </h1>
+		<h2> Louie was here </h2>
+		<p> this is a paragraph </p>
+	</body>
 </html>
