--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<body>
 		<h1> This is a heading </h1>
 		<h2> Louie was here </h2>
+		<h2> Sarah was here </h2>
 		<p> this is a paragraph </p>
 	</body>
 </html>
