--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html>
 	<head>
-
 		<title>CAKE</title>
-
 		<meta charset="utf-8">
 	</head>
 
 	<body>
 		<h1> This is a heading </h1>
+		<nav>
+			<a href=""></a>
+			<a href=""></a>
+		</nav>
 		<h2> Louie was here </h2>
 		<h2> Sarah was here </h2>
 		<p> this is a paragraph </p>
