adding something lel

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 
 	<body>
+		<p> adding something not useful</p>
 		<h1> This is a heading </h1>
 		<h2> Louie was here </h2>
 		<h2> Sarah was here </h2>
